# BinaryAtlas

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  TESTING.md
.github/workflows/: ci.yml
build-manual-audit/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build-manual-audit/Testing/Temporary/: CTestCostData.txt
build-manual-audit/tests/: CTestTestfile.cmake  Makefile  binaryatlas_tests-b12d07c_include.cmake  binaryatlas_tests-b12d07c_tests.cmake  cmake_install.cmake
cmake/: Findcapstone.cmake
docs/: architecture.md  examples.md  heuristics.md  roadmap.md
examples/: sample_commands.md
include/binaryatlas/analysis/: analysis_result.hpp  basic_block.hpp  function.hpp  graph_algorithms.hpp  metrics.hpp  recovery.hpp
include/binaryatlas/core/: analyzer.hpp  binary_image.hpp  error.hpp  result.hpp  types.hpp
include/binaryatlas/disasm/: disassembler.hpp  instruction.hpp
include/binaryatlas/format/: binary_format.hpp  elf_parser.hpp
include/binaryatlas/graph/: dot_exporter.hpp
include/binaryatlas/heuristics/: detector.hpp  finding.hpp
include/binaryatlas/output/: json_writer.hpp  terminal_renderer.hpp
include/binaryatlas/util/: arithmetic.hpp  byte_reader.hpp  file_io.hpp  string.hpp
src/analysis/: graph_algorithms.cpp  metrics.cpp  recovery.cpp
src/cli/: main.cpp
src/core/: analyzer.cpp  binary_image.cpp  error.cpp  types.cpp
src/disasm/: disassembler.cpp
src/format/: elf_parser.cpp
src/graph/: dot_exporter.cpp
src/heuristics/: detector.cpp
src/output/: json_writer.cpp  terminal_renderer.cpp
src/util/: file_io.cpp
tests/: CMakeLists.txt  test_support.hpp
tests/fixtures/src/: branching_cpp.cpp  direct_calls.c  graphics_keywords.c  if_else.c  indirect_call.c  loop.c  loop_cpp.cpp  straight_line.c  straight_line_cpp.cpp  switch_case.c  virtual_dispatch.cpp
tests/integration/: test_integration_analysis.cpp
tests/unit/: test_disassembler.cpp  test_elf_parser.cpp  test_graph_algorithms.cpp  test_heuristics.cpp  test_json_dot.cpp
